Implemented CSRF Check as a abstract Servlet, making it easier to use CSRF tokens Instead of using a two layered array to store the tokens generated by a client's form, it is now stored in directly in session using an unique session attribute key